--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <div class="absolute -inset-1 bg-gradient-to-r from-indigo-500 via-purple-500 to-indigo-500 rounded-xl blur opacity-20"></div>
                 <div class="relative rounded-xl border border-gray-800 shadow-2xl overflow-hidden">
                     <!-- Main Interface Screenshot -->
-                    <img src="hero页面.png" alt="Termia Interface" class="w-full opacity-90">
+                    <img src="hero.png" alt="Termia Interface" class="w-full opacity-90">
                 </div>
             </div>
         </div>
@@ -518,7 +518,7 @@
             <button onclick="closeWeChatModal()" class="absolute top-4 right-4 text-gray-400 hover:text-white text-2xl transition">&times;</button>
             <h3 class="text-2xl font-bold text-white mb-4">Join WeChat Community</h3>
             <p class="text-gray-400 mb-6">Scan the QR code to join our WeChat group</p>
-            <img src="微信群二维码.jpg" alt="WeChat QR Code" class="mx-auto rounded-lg border border-gray-700" style="max-width: 300px;">
+            <img src="wechat-qr.jpg" alt="WeChat QR Code" class="mx-auto rounded-lg border border-gray-700" style="max-width: 300px;">
             <p class="text-sm text-gray-500 mt-4">扫描二维码加入微信群</p>
         </div>
     </div>
@@ -631,6 +631,4 @@
     </script>
 
 </body>
-
 </html>
-
