--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <div class="absolute -inset-1 bg-gradient-to-r from-indigo-500 via-purple-500 to-indigo-500 rounded-xl blur opacity-20"></div>
                 <div class="relative rounded-xl border border-gray-800 shadow-2xl overflow-hidden">
                     <!-- Main Interface Screenshot -->
-                    <img src="hero.png" alt="Termia Interface" class="w-full opacity-90">
+                    <img src="/hero.png" alt="Termia Interface" class="w-full opacity-90">
                 </div>
             </div>
         </div>
@@ -631,4 +631,5 @@
     </script>
 
 </body>
+
 </html>
