--- a/index.html
+++ b/index.html
@@ -188,13 +188,8 @@
                         <span>Download for Windows</span>
                     </a>
                 </div>
-                <!-- Package Managers -->
                 <div class="text-sm text-gray-500">
-                    <span>Also available via:</span>
-                    <span class="ml-2 font-mono text-gray-400 bg-gray-900 px-2 py-1 rounded border border-gray-800">brew install termia</span>
-                    <span class="mx-1">/</span>
-                    <span class="font-mono text-gray-400 bg-gray-900 px-2 py-1 rounded border border-gray-800">winget install termia</span>
-                    <div class="mt-2 text-xs opacity-60">Linux support coming soon</div>
+                    <span class="text-xs opacity-60">Linux support coming soon</span>
                 </div>
             </div>
 
