--- a/index.html
+++ b/index.html
@@ -757,8 +757,8 @@
             // Download file paths
             // TODO: Replace with your GitHub Release URLs after uploading installers
             const downloadLinks = {
-                'Mac': 'https://github.com/sunnyxu3/termia-releases/releases/download/untagged-c97d3dc18c7c86686759/Wave-darwin-arm64-0.11.6-beta.1.zip',
-                'Windows': 'https://github.com/sunnyxu3/termia-releases/releases/download/untagged-c97d3dc18c7c86686759/Wave-win32-x64-0.11.6-beta.2025-12-19.exe'
+                'Mac': 'https://github.com/sunnyxu3/termia-releases/releases/download/v11.6/Wave-darwin-arm64-0.11.6-beta.1.zip',
+                'Windows': 'https://github.com/sunnyxu3/termia-releases/releases/download/v11.6/Wave-win32-x64-0.11.6-beta.1.2026.01.30.exe'
             };
             
             const downloadUrl = downloadLinks[os];
