--- a/index.html
+++ b/index.html
@@ -714,9 +714,8 @@
         <div class="modal-content p-8 text-center">
             <button onclick="closeWeChatModal()" class="absolute top-4 right-4 text-gray-400 hover:text-white text-2xl transition">&times;</button>
             <h3 class="text-2xl font-bold text-white mb-4">Join WeChat Community</h3>
-            <p class="text-gray-400 mb-6">Scan the QR code to join our WeChat group</p>
+            <p class="text-gray-400 mb-6">Scan the QR code to contact us</p>
             <img src="wechat-qr.jpg" alt="WeChat QR Code" class="mx-auto rounded-lg border border-gray-700" style="max-width: 300px;">
-            <p class="text-sm text-gray-500 mt-4">扫描二维码加入微信群</p>
         </div>
     </div>
 
